fix: bug slider adaptation on tablet versions

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -707,6 +707,18 @@ html.stop {
         max-width: 600px;
         justify-content: start;
         margin-bottom: 20px;
+        gap: 9.5%;
+    }
+}
+
+@media screen and (max-width: 800px) and (min-width: 780px) {
+    .pet_cards {
+        gap: 10%;
+    }
+}
+
+@media screen and (max-width: 779px) and (min-width: 769px) {
+    .pet_cards {
         gap: 9%;
     }
 }
